--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-v4l = "0.14.0"
+gstreamer = "0.24.1"
+gstreamer-app = "0.24"
+image = "0.24"
+anyhow = "1.0"
